# ChangeLog for app-mobilephone/ganyremote
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/ganyremote/ChangeLog,v 1.28 2015/03/04 10:27:46 kensington Exp $

  04 Mar 2015; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Add upstream metadata.

  09 Apr 2014; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  [QA] Dissolve the mobile-phone herd to maintainer-needed because it is empty
  and nobody joined it after multiple recruitment mails.

*ganyremote-6.2 (25 Jul 2013)

  25 Jul 2013; Chris Reffett <creffett@gentoo.org> +ganyremote-6.2.ebuild:
  Version bump wrt bug 473318

  25 Jul 2013; Chris Reffett <creffett@gentoo.org> metadata.xml:
  Add to mobile-phone herd.

*ganyremote-6.1 (14 Mar 2013)

  14 Mar 2013; Tom Wijsman <TomWij@gentoo.org> +ganyremote-6.1.ebuild:
  Non-maintainer commit, version bump to 6.1.

  03 Mar 2013; Pacho Ramos <pacho@gentoo.org> -ganyremote-5.13.ebuild,
  -ganyremote-6.0.ebuild, metadata.xml:
  Drop from metadata as talked with him

  10 Sep 2012; Johannes Huber <johu@gentoo.org> ganyremote-6.0.1.ebuild:
  Stable for x86, wrt bug #428888

  08 Sep 2012; Agostino Sarubbo <ago@gentoo.org> ganyremote-6.0.1.ebuild:
  Stable for amd64, wrt bug #428888

*ganyremote-6.0.1 (17 Aug 2012)

  17 Aug 2012; Markos Chandras <hwoarang@gentoo.org> +ganyremote-6.0.1.ebuild,
  -ganyremote-5.11.6.ebuild, -ganyremote-5.12.ebuild:
  Version bump. Remove old

*ganyremote-6.0 (09 Jun 2012)

  09 Jun 2012; Markos Chandras <hwoarang@gentoo.org> +ganyremote-6.0.ebuild:
  Versun bump

  04 Apr 2012; Jeff Horelick <jdhore@gentoo.org> ganyremote-5.13.ebuild:
  marked x86 per bug 404613

  28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> ganyremote-5.13.ebuild:
  Stable for amd64, wrt bug #404613

*ganyremote-5.13 (10 Dec 2011)

  10 Dec 2011; Markos Chandras <hwoarang@gentoo.org> +ganyremote-5.13.ebuild:
  Version bump
